--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
   "name": "recro",
   "license": "MIT",
-  "version": "0.1.0",
-  "main": "./src",
-  "dependencies": {
-    "lodash": "^4.17.15",
-    "react": "^16.13.1"
+  "version": "0.1.3",
+  "peerDependencies": {
+    "lodash": ">=4",
+    "react": ">=16.4"
   },
-  "scripts": {}
+  "scripts": {
+    "build": "webpack"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
+    "babel-loader": "^8.1.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
+  }
 }
